<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/times_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/work_started"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:hint="@string/work_started"
            android:textAlignment="center"

            android:background="?attr/selectableItemBackground"
            android:onClick="setWorkStarted"

            android:focusable="false"
            android:cursorVisible="false"

            android:layout_weight="0.45"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"


            android:text="-"
            android:textAlignment="center"

            android:layout_weight="0.1"/>

        <EditText
            android:id="@+id/work_ended"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:hint="@string/work_ended"
            android:textAlignment="center"

            android:background="?attr/selectableItemBackground"
            android:onClick="setEndDate"

            android:focusable="false"
            android:cursorVisible="false"

            android:layout_weight="0.45"/>

    </LinearLayout>

    <TextView
        android:id="@+id/worked_hours_label"

        android:text="@string/worked_hours"

        android:paddingTop="15dp"
        android:layout_below="@id/times_layout"

        android:labelFor="@id/work_started"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/worked_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/times_layout"
        android:hint="time"

        android:inputType="number"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>